[package]
name = "spidroin"
version = "0.1.0"
edition = "2021"
authors = ["vvvince <vvvince@ofcompute.rs>"]

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "debuginfo"
lto = "thin"

[dependencies]
ext-php-rs = "0.10.1"
http-body-util = "0.1.0-rc.2"
hyper = { version = "= 1.0.0-rc.3", features = ["client", "http1", "http2"] }
hyper-rustls = "0.24.0"
rustls = "0.21.2"
tokio = { version = "1", features = ["full"] }
