[package]
name = "spidroin"
version = "0.1.0"
edition = "2021"
authors = ["vvvince <vvvince@ofcompute.rs>"]

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "debuginfo"
lto = "thin"

[dependencies]
base64 = "0.21.2"
ext-php-rs = "0.10.1"
http = "0.2.9"
http-body-util = "0.1.0-rc.2"
hyper = { version = "= 1.0.0-rc.3", features = ["client", "http1", "http2"] }
hyper-rustls = "0.24.0"
once_cell = "1.18.0"
rustls = "0.21.2"
serde = "1.0.164"
serde_json = "1.0.99"
serde_urlencoded = "0.7.1"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.2"
